# bugsink

./: .bandit  .coveragerc  .env.dist  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  DESIGN-alerts.md  DESIGN-breadcrumbs.md  DESIGN-connections.md  DESIGN-log-messages.md  DESIGN-orgs-and-alerts.md  DESIGN-orgs-teams.md  DESIGN-performance.md  DESIGN-process-model.md  DESIGN.md  Dockerfile  Dockerfile.db  Dockerfile.fromwheel  LICENSE  NOTIFICATION_BACKENDS.md  RAM_PROFILE_FINDINGS.md  README.md  SECURITY.md  builddocker.bash  buildxdocker.bash  client_dsn.txt  compose-sample.yaml  cornless-interrupt-sqlite.py  cornless-print-other-thread.py  cornless-set-progress-handler.py  cornless.py  diagnose.py  docker-compose-sample.yaml  docker-compose.yml  init_bugsink.py  ith_prefix }}"|g  manage.py  pre-commit  (+9 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
alerts/: admin.py  forms.py  models.py  tasks.py  tests.py  utils.py  views.py
api/: LICENSE  README.md  event.schema.altered.json  event.schema.json
assets/: blue-64x64-manual-changes.xcf  sites-and-prompts.txt
bsmain/: __init__.py  admin.py  apps.py  future_python.py  models.py  tasks.py  test_create_project_command.py  test_vacuum.py  tests.py  urls.py  utils.py  views.py
bugsink/: .urls.py.swo  __init__.py  api_fields.py  api_mixins.py  api_pagination.py  api_schema.py  api_serializers.py  app_settings.py  asgi.py  authentication.py  celery.py  conf_utils.py  context_processors.py  dbrouters.py  debug_views.py  decorators.py  email_backends.py  event_schema.py  exceptions.py  gunicorn.docker.conf.py  init_bug.py  invite_links.py  middleware.py  moreiterutils.py  period_counter.py  period_utils.py  permissions.py  pygments_extensions.py  pyvenv.cfg  registry.py  settings.py  streams.py  test_api.py  test_conf_utils.py  test_subpath.py  test_utils.py  tests.py  tooling.py  transaction.py  urls.py  (+5 more)
bugsink_data/: db.sqlite3  id.txt
compat/: auth.py  dsn.py  tests.py  timestamp.py  vars.py
ee/: LICENSE
events/: admin.py  api_views.py  apps.py  factories.py  markdown_stacktrace.py  models.py  normalization.py  renderers.py  retention.py  retention_insight.py  retention_simulator.py  serializers.py  source_maps.py  sparklines.py  storage.py  storage_registry.py  tasks.py  test_api.py  test_thread_stacktraces.py  tests.py  ua_stuff.py  urls.py  usage.py  utils.py  validation.py  views.py
files/: admin.py  minidump.py  models.py  object_kinds.py  storage.py  storage_registry.py  tasks.py  test_vacuum.py  tests.py  urls.py  views.py
ingest/: admin.py  event_counter.py  filestore.py  header_validators.py  models.py  negotiation.py  parsers.py  tasks.py  tests.py  urls.py  views.py
issues/: admin.py  api_views.py  apps.py  dbData.txt  factories.py  forms.py  markdown_issue.py  models.py  regressions.py  serializers.py  tasks.py  test_api.py  test_cleanup_orphaned_issues.py  test_grouping_mechanism_boundaries.py  test_grouping_v1.py  test_grouping_v2.py  test_legacy_grouping.py  tests.py  urls.py  useAPI-ok.py  useAPI.py  utils.py  views.py
performance/: bursty_data.py  (+2 more)
(+545 files in other folders)
