[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "bugsink/_version.py"

[project]
name = "Bugsink"
authors = [
    {name = "Bugsink B.V.", email = "klaas@vanschelven.com"},
]
description = "Dead simple crash monitoring."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.scripts]
bugsink-manage = "bugsink.scripts.manage:main"
bugsink-create-example-conf = "bugsink.scripts.create_example_conf:main"

[tool.setuptools]
include-package-data = true  # this is the default, but explicit is better than implicit

[tool.setuptools.packages.find]
where = ["."]
include = [
    "alerts*",
    "api*",
    "bugsink*",
    "compat*",
    "events*",
    "ingest*",
    "issues*",
    "performance*",
    "projects*",
    "releases*",
    "sentry*",
    "sentry_sdk_extensions*",
    "snappea*",
    "static*",
    "templates*",
    "theme*",
]

# exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
